--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "firebase": "^10.12.1",
     "formik": "^2.4.6",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
