Estructuración de MyAccount/ userData en el contexto/ Servicio de Firebase para actualizar usuario y crear ordenes/ Instalacion MUI

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
+    "@mui/x-date-pickers": "^7.7.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.1",
     "formik": "^2.4.6",
     "gh-pages": "^6.1.1",
